EXAMEN_2EV cambios puntos 3 4 y 6

--- a/examen2ev/src/app/app.component.html
+++ b/examen2ev/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="main-box">
   <ul>
     <li class="margen-menu"><a routerLink='/Index'>Inicio</a></li>
+    <span class="line"></span>
+    <li class="margen-menu"><a routerLink='/ExSecondView'>2vista</a></li>
+    <li class="margen-menu"><a routerLink='/ExButton'>boton</a></li>
   </ul>
 </div>
-
 <router-outlet></router-outlet>
