“EXAMEN_2EV ultimos retoques

--- a/examen2ev/src/app/app.component.html
+++ b/examen2ev/src/app/app.component.html
@@ -1,12 +1,11 @@
 <div class="main-box">
   <ul>
-    <li class="margen-menu"><a routerLink='/Index'>Inicio</a></li>
+    <li class="margen-menu"><a routerLink='/AppComponent'>Inicio</a></li>
     <span class="line"></span>
     <li class="margen-menu"><a routerLink='/ExSecondView'>2vista</a></li>
     <li class="margen-menu"><a routerLink='/ExButton'>boton</a></li>
   </ul>
 </div>
-
-
-
+<h2>Welcome to Web Development! </h2>
+<p>{{title}}</p>
 <router-outlet></router-outlet>
